Fix layout shifting and flicker on type switching and nagivate

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -57,6 +57,10 @@
   margin: 0;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   min-height: 100vh;
   color: var(--color-text);
